# web3-docs

./: .gitignore  .gitleaksignore  CHANGELOG.md  LICENSE  README.md  contracts.json  db.py  parser.py  pyproject.toml  server.json  server.py
.github/workflows/: ci.yml  release.yml
docs/assets/: demo.cast  demo.py  demo.tape  demo2.py  demo2.tape  demo3.py  demo3.tape
scripts/: release.sh
tests/: conftest.py  test_db.py  test_enrichment.py  test_new_chains.py  test_parsing.py  test_polish.py  test_retrieval.py  test_search.py
tests/features/: retrieval.feature  search.feature
